Give edition titles even less space on mobile, to avoid overlap

--- a/srcmedia/scss/books/_circulation.scss
+++ b/srcmedia/scss/books/_circulation.scss
@@ -37,7 +37,7 @@
             position: absolute;
             right: 0;
             top: 0;
-            width: 40%;
+            width: 25%;
             text-align: right;
             padding: 1rem;
             overflow: hidden;
